# adventofcode2025

./: pyproject.toml
.devcontainer/: devcontainer.json
src/day01/: solution.py
src/day01/tests/: test_solution.py
src/day02/: __main__.py  solution.py
src/day02/tests/: test_solution.py
src/day03/: solution.py
src/day03/tests/: test_solution.py
src/day04/: __main__.py  solution.py
src/day04/tests/: test_solution.py
src/day05/: solution.py
src/day05/tests/: test_solution.py
src/day06/: solution.py
src/day06/tests/: test_solution.py
src/day07/: solution.py
src/day07/tests/: test_solution.py
src/day08/: solution.py
src/day08/tests/: test_solution.py
src/day09/: solution.py
src/day09/tests/: test_solution.py
src/day10/: solution.py
src/day11/: __main__.py
src/day12/: __main__.py  solution.py
src/day12/tests/: test_solution.py
src/util/: __init__.py  util.py
