[project]
name = "adventofcode2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pytest>=9.0.1",
]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

[dependency-groups]
dev = [
    "ruff>=0.14.7",
]
